--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Mthomas3/mthomas3-website#readme",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "sass": "^1.25.0"
   }
 }
